test more to see score responsive, test 5 to see results added, mobile setup title spacing fixed

--- a/src/views/css/setup.css
+++ b/src/views/css/setup.css
@@ -133,7 +133,7 @@
     }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 550px) {
     .SetupContainer { width: 85vw; }
-    .setupGuideContainer {margin-left: .5rem;}
+    .setupGuideContainer {margin-left: 0rem;}
 }
